RESOLVED FIXED88910
[chromium] REGRESSION(119769): Canvas2DLayerBridge may go away before its TextureLayerChromium
https://bugs.webkit.org/show_bug.cgi?id=88910
Summary [chromium] REGRESSION(119769): Canvas2DLayerBridge may go away before its Tex...
James Robinson
Reported 2012-06-12 13:49:51 PDT
[chromium] REGRESSION(119769): Canvas2DLayerBridge may go away before its TextureLayerChromium
Attachments
Patch (3.42 KB, patch)
2012-06-12 13:50 PDT, James Robinson
enne: review+
James Robinson
Comment 1 2012-06-12 13:50:55 PDT
Adrienne Walker
Comment 2 2012-06-12 13:52:31 PDT
Comment on attachment 147151 [details] Patch R=me. Thanks for the test.
James Robinson
Comment 3 2012-06-12 13:54:56 PDT
Note You need to log in before you can comment on or make changes to this bug.