[chromium] REGRESSION(119769): Canvas2DLayerBridge may go away before its TextureLayerChromium https://bugs.webkit.org/show_bug.cgi?id=88910

Reviewed by Adrienne Walker.

Source/WebCore:

Unregister the bridge as its TextureLayerChromium client when going away.

Covered by new unit test in Canvas2DLayerBridgeTest.cpp.

* platform/graphics/chromium/Canvas2DLayerBridge.cpp:
(WebCore::Canvas2DLayerBridge::~Canvas2DLayerBridge):

Source/WebKit/chromium:

New unit test to verify that we can still update a TextureLayerChromium after the bridge owning it has gone
away.

* tests/Canvas2DLayerBridgeTest.cpp:

Canonical link: https://commits.webkit.org/106741@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120117 268f45cc-cd09-0410-ab3c-d52691b4dbfc